--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,1 +1,17 @@
-<p>Main</p>
+<div class="container main">
+  <img src="/public/img/bar.png" class="img-responsive centered">
+  <p class="subtitle">Making people happy {and drunk}</p>
+  <div class="columns text-center">
+    <div class="column col-md-4 centered">
+      <form>
+        <div class="input-group">
+          <input type="text" class="form-input" placeholder="Where are you?" />
+          <button class="btn btn-primary input-group-btn">Search</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+<!-- createToDo() WILL CREATE NEW TODOS -->
+<!-- button type="submit" class="btn btn-primary" ng-click="addClick()">Add</button>
+<a class="btn" href="#other">Go to other</a -->
