--- a/public/css/spectre.css
+++ b/public/css/spectre.css
@@ -379,12 +379,12 @@ body {
   overflow-x: hidden;
 }
 a {
-  color: #4db6ac;
+  color: #ec407a;
   text-decoration: underline;
 }
 a:hover,
 a:focus {
-  color: #265d58;
+  color: #9d103f;
 }
 [disabled],
 .disabled {
@@ -491,7 +491,7 @@ mark,
 }
 pre {
   background: #f9f9f9;
-  border-left: .2rem solid #009688;
+  border-left: .2rem solid #e91e63;
   line-height: 1.8rem;
   margin-bottom: 1em;
   margin-top: 1em;
@@ -571,9 +571,9 @@ pre code {
 .btn {
   -webkit-appearance: none;
   background: transparent;
-  border: .1rem solid #009688;
+  border: .1rem solid #e91e63;
   border-radius: .3rem;
-  color: #4db6ac;
+  color: #ec407a;
   cursor: pointer;
   display: inline-block;
   font-size: 1.4rem;
@@ -591,36 +591,36 @@ pre code {
   white-space: nowrap;
 }
 .btn:focus {
-  background: #68fff1;
+  background: #fcdce7;
 }
 .btn:hover {
-  background: #009688;
-  border-color: #007d71;
+  background: #e91e63;
+  border-color: #d81557;
   color: #fff;
 }
 .btn:active,
 .btn.active {
-  background: #007d71;
-  border-color: #00635a;
+  background: #d81557;
+  border-color: #c1134e;
   color: #fff;
 }
 .btn.btn-primary {
-  background: #009688;
-  border-color: #007d71;
+  background: #e91e63;
+  border-color: #d81557;
   color: #fff;
 }
 .btn.btn-primary:focus {
-  background: #008c7f;
+  background: #e6175d;
 }
 .btn.btn-primary:hover {
-  background: #007d71;
-  border-color: #00635a;
+  background: #d81557;
+  border-color: #c1134e;
   color: #fff;
 }
 .btn.btn-primary:active,
 .btn.btn-primary.active {
-  background: #00635a;
-  border-color: #004a43;
+  background: #c1134e;
+  border-color: #aa1145;
   color: #fff;
 }
 .btn.btn-primary.loading::after {
@@ -631,15 +631,15 @@ pre code {
 .btn.btn-link {
   background: transparent;
   border-color: transparent;
-  color: #4db6ac;
+  color: #ec407a;
 }
 .btn.btn-link:hover,
 .btn.btn-link:focus {
-  color: #35817a;
+  color: #cb1452;
 }
 .btn.btn-link:active,
 .btn.btn-link.active {
-  color: #265d58;
+  color: #9d103f;
 }
 .btn.btn-sm {
   border-radius: .2rem;
@@ -727,7 +727,7 @@ pre code {
   width: 100%;
 }
 .form-input:focus {
-  border-color: #009688;
+  border-color: #e91e63;
 }
 .form-input[disabled] {
   background: #eeeff2;
@@ -785,7 +785,7 @@ textarea.form-input {
   padding-right: 2.4rem;
 }
 .form-select:focus {
-  border-color: #009688;
+  border-color: #e91e63;
 }
 .form-select::-ms-expand {
   display: none;
@@ -837,8 +837,8 @@ textarea.form-input {
 }
 .form-checkbox input:checked + .form-icon,
 .form-radio input:checked + .form-icon {
-  background: #009688;
-  border-color: #009688;
+  background: #e91e63;
+  border-color: #e91e63;
 }
 .form-checkbox .form-icon {
   border-radius: .2rem;
@@ -909,8 +909,8 @@ textarea.form-input {
   width: 1.4rem;
 }
 .form-switch input:checked + .form-icon {
-  background: #009688;
-  border-color: #009688;
+  background: #e91e63;
+  border-color: #e91e63;
 }
 .form-switch input:checked + .form-icon::after {
   left: 1rem;
@@ -1407,16 +1407,16 @@ textarea.form-input {
 }
 .form-autocomplete .form-autocomplete-item:hover,
 .form-autocomplete .form-autocomplete-item:focus {
-  background: #7dfff3;
+  background: #fdeff4;
 }
 .form-autocomplete .form-autocomplete-item.active {
-  background: #63fff0;
+  background: #fbd8e4;
 }
 .badge {
   position: relative;
 }
 .badge[data-badge]::after {
-  background: #009688;
+  background: #e91e63;
   background-clip: padding-box;
   border: .1rem solid #fff;
   border-radius: 1rem;
@@ -1516,7 +1516,7 @@ textarea.form-input {
 }
 .chip-sm {
   align-items: center;
-  background: #63fff0;
+  background: #fbd8e4;
   border-radius: .3rem;
   color: #666;
   display: -ms-inline-flexbox;
@@ -1531,21 +1531,21 @@ textarea.form-input {
 }
 .chip-sm:hover,
 .chip-sm:focus {
-  background: #59ffef;
+  background: #facfdd;
 }
 .chip-sm .btn-clear {
   margin-top: -.2rem;
 }
 .chip-sm .btn-clear::before {
-  color: #00635a;
+  color: #c1134e;
   font-size: 1.6rem;
 }
 .chip-sm.selected {
-  background: #009688;
+  background: #e91e63;
   color: #fff;
 }
 .chip-sm.selected .btn-clear::before {
-  color: #63fff0;
+  color: #fbd8e4;
 }
 .chip-sm .chip-name {
   margin-left: .4rem;
@@ -1569,8 +1569,8 @@ textarea.form-input {
   white-space: nowrap;
 }
 .label.label-primary {
-  background: #009688;
-  border-color: #008c7f;
+  background: #e91e63;
+  border-color: #e6175d;
   color: #fff;
 }
 .menu {
@@ -1606,12 +1606,12 @@ textarea.form-input {
 }
 .menu .menu-item a:hover,
 .menu .menu-item a:focus {
-  color: #4db6ac;
+  color: #ec407a;
 }
 .menu .menu-item a:active,
 .menu .menu-item a.active {
-  background: #63fff0;
-  color: #44a69c;
+  background: #fbd8e4;
+  color: #ea296a;
 }
 .menu .menu-header {
   color: #ccc;
@@ -1752,12 +1752,12 @@ textarea.form-input {
 }
 .tab .tab-item a:hover,
 .tab .tab-item a:focus {
-  border-bottom-color: #009688;
-  color: #4db6ac;
+  border-bottom-color: #e91e63;
+  color: #ec407a;
 }
 .tab .tab-item.active a {
-  border-bottom-color: #00635a;
-  color: #3c948b;
+  border-bottom-color: #c1134e;
+  color: #e2175b;
 }
 .tab.tab-block .tab-item {
   -ms-flex: 1 0 auto;
@@ -1790,10 +1790,10 @@ textarea.form-input {
 }
 .pagination .page-item a:hover,
 .pagination .page-item a:focus {
-  background: #63fff0;
+  background: #fbd8e4;
 }
 .pagination .page-item.active a {
-  background: #009688;
+  background: #e91e63;
   color: #fff;
 }
 .toast {
@@ -1806,8 +1806,8 @@ textarea.form-input {
   width: 100%;
 }
 .toast.toast-primary {
-  background: #009688;
-  border-color: #008c7f;
+  background: #e91e63;
+  border-color: #e6175d;
   color: #fff;
 }
 .toast.toast-success {
@@ -2069,7 +2069,7 @@ textarea.form-input {
 }
 .loading::after {
   animation: loading 500ms infinite linear;
-  border: .2rem solid #009688;
+  border: .2rem solid #e91e63;
   border-radius: .8rem;
   border-right-color: transparent;
   border-top-color: transparent;
