Add Venues model

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -25,7 +25,7 @@
           <a href="/login/twitter" class="btn btn-primary"><i aria-hidden="true" class="fa fa-twitter"></i> Sign In</a>
         <% } else { %>
           <span class="hide-sm">Welcome <%= user.twitter.name %> !</span>
-          <a href="/logout" class="btn btn-primary"><i aria-hidden="true" class="fa fa-cog"></i> Logout</a>
+          <a href="/logout" class="btn btn-primary">Logout</a>
         <% } %>
       </section>
     </header>
