Change image background to localhost

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,7 +8,7 @@
 }
 
 .main {
-  background-image: url("//i.imgur.com/wR71gDX.jpg");
+  background-image: url("/public/img/photo_background.jpg");
   text-align: center;
   padding: 10px 0 10px 0;
   height: 300px;
