--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -19,7 +19,7 @@
         <a href="#/" class="navbar-brand">BarSquare</a>
       </section>
       <section class="navbar-section">
-        <a href="#" class="btn btn-link">Last searchs</a>
+        <a href="#" class="btn btn-link">Last locations</a>
         <% if (!user) { %>
           <span class="hide-sm">Welcome, Do I know you?</span>
           <a href="/login/twitter" class="btn btn-primary"><i aria-hidden="true" class="fa fa-twitter"></i> Sign In</a>
