--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,10 +5,18 @@
     <div class="column col-md-4 centered">
       <form>
         <div class="input-group">
-          <input type="text" class="form-input" ng-model="where" placeholder="Where are you?" />
+          <input type="text" class="form-input" ng-model="where" placeholder="Where are you go today?" />
           <button class="btn btn-primary input-group-btn" id="btn_search" ng-click="getSearch()">Search</button>
         </div>
       </form>
+    </div>
+  </div>
+  <div class="columns">
+    <div class="column">
+      <div class="chip-sm" ng-repeat="location in latest">
+          <span class="chip-name">{{ location.name }}</span>
+          <button class="btn btn-clear" id="{{ 'loc_' + location.id }}" ng-click="closeChip('loc_' + location.id)"></button>
+      </div>
     </div>
   </div>
 </div>
