Add credits, author and change README

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,7 +5,7 @@
     <div class="column col-md-4 centered">
       <form>
         <div class="input-group">
-          <input type="text" class="form-input" ng-model="where" placeholder="Where are you go today?" />
+          <input type="text" class="form-input" ng-model="where" placeholder="Where do you want to go?" />
           <button class="btn btn-primary input-group-btn" id="btn_search" ng-click="getSearch()">Search</button>
         </div>
       </form>
