--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!doctype html>
 <html ng-app="barsquareApp">
   <head>
@@ -15,7 +14,7 @@
   <body ng-controller="MainController">
     <header class="navbar">
       <section class="navbar-section">
-        <a href="#/" class="btn btn-link btn-lg"><i class="fa fa-bars"></i></a>
+        <a href="//developer.foursquare.com/" target="_blank" class="btn btn-link btn-lg tooltip tooltip-right" data-tooltip="Powered by Foursquare"><i class="fa fa-foursquare"></i></a>
         <a href="#/" class="navbar-brand">BarSquare</a>
       </section>
       <section class="navbar-section">
@@ -30,5 +29,7 @@
       </section>
     </header>
     <div ng-view></div>
+    <br/>
+    <p class="text-center">developed by <a class="credits" href="https://codepen.io/mirabalj" target="_blank">@mirabalj</a></p>
   </body>
 </html>
